[package]
name = "bno080"
version = "0.1.1"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "BNO080 AHRS driver"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/bno080"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "bno080",
    "ahrs",
    "imu"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m-semihosting = "0.3.5"

